# shogi

./: .gitignore  LICENSE  shogi-board.cabal  shogi.cabal  stack.yaml
src/: Shogi.hs  ShogiBoard.hs
src/Shogi/: Board.hs  Clock.hs  Color.hs  Piece.hs  Position.hs  Promoted.hs  Promotion.hs  Square.hs  Stand.hs  State.hs  States.hs
src/ShogiBoard/: Board.hs  Color.hs  Piece.hs  Promoted.hs  Square.hs  Stand.hs
test/: ShogiTest.hs  test.hs
test/ShogiBoardTest/: BoardTest.hs  CheckMateTest.hs  CheckTest.hs  DropTest.hs  DropsTest.hs  ListsTest.hs  MoveTest.hs  MovesTest.hs  PieceTest.hs
test/ShogiBoardTest/BoardTest/: DropTest.hs  DropsTest.hs  MoveTest.hs  MovesTest.hs
test/ShogiBoardTest/PieceTest/: DropsTest.hs  MovesTest.hs  PromotionsTest.hs
test/ShogiTest/: BoardTest.hs  ColorTest.hs  CountdownTest.hs  HirateTest.hs  MoveTest.hs  PieceTest.hs  PositionTest.hs  StandTest.hs  StateTest.hs
test/ShogiTest/BoardTest/: DropTest.hs  DropsTest.hs  MoveTest.hs  MovesTest.hs
test/ShogiTest/MoveTest/: DropPieceTest.hs  MovePieceTest.hs  ResignTest.hs
test/ShogiTest/PieceTest/: DropsTest.hs  MovesTest.hs  PromotionsTest.hs
test/ShogiTest/PositionTest/: CheckMateTest.hs  CheckTest.hs  DropTest.hs  DropsTest.hs  ListsTest.hs  MoveTest.hs  MovesTest.hs
test/ShogiTest/StateTest/: CheckMateTest.hs  CheckTest.hs  DropTest.hs  DropsTest.hs  ListsTest.hs  MoveTest.hs  MovesTest.hs
