name:                shogi-board
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/JunKikuchi/shogi-board#readme
license:             BSD3
license-file:        LICENSE
author:              Jun Kikuchi
maintainer:          kikuchi@bonnou.com
copyright:           2017 Jun Kikuchi
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ShogiBoard
                     , ShogiBoard.Board
                     , ShogiBoard.Stand
                     , ShogiBoard.Square
                     , ShogiBoard.Piece
                     , ShogiBoard.Color
  build-depends:       base >= 4.7 && < 5
                     , containers
  default-language:    Haskell2010

test-suite shogi-board-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test.hs
  build-depends:       base
                     , tasty
                     , tasty-hunit
                     -- , tasty-smallcheck
                     -- , tasty-quickcheck
                     , shogi-board
  other-modules:       ShogiBoardTest.CheckmateTest
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/JunKikuchi/shogi-board
