name:                shogi
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/JunKikuchi/shogi#readme
license:             BSD3
license-file:        LICENSE
author:              Jun Kikuchi
maintainer:          kikuchi@bonnou.com
copyright:           2017 Jun Kikuchi
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Shogi
                     , Shogi.Color
                     , Shogi.Clock
                     , Shogi.State
                     , Shogi.States
                     , Shogi.Board
                     , Shogi.Stand
                     , Shogi.Piece
                     , Shogi.Promoted
                     , Shogi.Square
                     , ShogiBoard
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , game-clock
  default-language:    Haskell2010

test-suite shogi-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test.hs
  build-depends:       base
                     , tasty
                     , tasty-hunit
                     , tasty-smallcheck
                     , smallcheck
                     -- , tasty-quickcheck
                     , shogi
  other-modules:       ShogiTest
                     , ShogiTest.BoardTest
                     , ShogiTest.BoardTest.MoveTest
                     , ShogiTest.BoardTest.DropTest
                     , ShogiTest.BoardTest.MovesTest
                     , ShogiTest.BoardTest.DropsTest
                     , ShogiTest.PieceTest
                     , ShogiTest.PieceTest.MovesTest
                     , ShogiTest.PieceTest.DropsTest
                     , ShogiTest.PieceTest.PromotionsTest
                     , ShogiBoardTest.ListsTest
                     , ShogiBoardTest.CheckTest
                     , ShogiBoardTest.CheckmateTest
                     , ShogiBoardTest.MoveTest
                     , ShogiBoardTest.DropTest
                     , ShogiBoardTest.MovesTest
                     , ShogiBoardTest.DropsTest
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/JunKikuchi/shogi
